--- a/EmployeeManagmentSystem/EmployeeManagmentSystem.csproj
+++ b/EmployeeManagmentSystem/EmployeeManagmentSystem.csproj
@@ -523,6 +523,7 @@
     <Content Include="Content\fonts\summernote\summernote.woff" />
     <Content Include="Content\fonts\summernote\summernote.woff2" />
     <Content Include="AuthenticationLayout.Master" />
+    <Content Include="WebForm1.aspx" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -681,6 +682,13 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
